# majidkhoshrou.github.io

./: .gitignore  LICENSE  README.md  about-me.html  about-us.html  about.html  chat.html  cv.html  index.html  main.html  projects.html  research.html
backend/: .gitignore  app.py  build_faiss_index.py  extract_knowledge.py  generate_embedding_knowledge.py  generate_embeddings.py  generate_knowledge_embeddings.py  knowledge_chunks.json  main.py  parsing_html_pdf_files.py  pyproject.toml  requirements.txt  run_extract.py  test.py
backend/.cache_linked/: cookies  gedragscode  gedragscode-slim-netbeheer-goedgekeurd-door-ap  ontwikkelinenergietran  privacy-statement  privacystatement  temp_1159811870aa45f5872c17bac44553d4.html  temp_d4b1d7c4cebd4505a6658862c687e571.html
backend/data/: embeddings.json  faiss.index  faiss_metadata.json  knowledge_chunks.json  publications.json
backend/libs/: analytics.py  build_faiss_index.py  extract_knowledge copy.py  extract_knowledge.py  generate_knowledge_embeddings.py  make_gif_from_figs.py  processing copy.py  processing.py  search.py
backend/static/css/: analytics-style.css  chat-style.css  style.css
backend/static/data/: publications.json
backend/static/js/: chat.js  publications.js
backend/templates/: about.html  analytics.html  ask-mr-m.html  contact.html  cv.html  index.html  index_0.html  projects copy.html  projects.html  research.html  talks.html
backend/tests/: linked.html  test_processing.py  test_sample.html
css/: chat-style.css  cv-style.css  cv-styles.css  publications-style.css  style.css  styles.css
(+23 files in other folders)
