[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.13.4",
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-limiter>=3.12",
    "fuzzywuzzy>=0.18.0",
    "httpie>=3.2.4",
    "openai>=1.95.0",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
]
